--- a/public/css/home.styl
+++ b/public/css/home.styl
@@ -1,5 +1,5 @@
 blanco = #FFF
-gris_light = #EEE
+gris_light = #FAFAFA
 azul = #0EBECC
 azul_dark = #4C6A8D
 azul_medium = #00A2E6
@@ -12,12 +12,15 @@ body
 	background gris_light
 	font-family 'Roboto', sans-serif
 
-.container
+.actual-tab
+	background #333
+
+.borde
+	border 2px solid red
+
+.post-container
 	.new
-		display inline-block
-		margin-bottom 2em
-		overflow hidden
-		width 49%
+		margin-bottom 1em
 		.autor
 			margin 0
 			width 15% 
@@ -28,11 +31,13 @@ body
 			
 		.content
 			background blanco
+			border 1px solid #f0f0f0
 			border-bottom 2px solid azul
 			position relative
-			width 80%
+			width 100%
 			.description
-				margin 1em	 auto
+				padding .1em
+				margin 1em auto
 				width 95%
 			
 			.options
@@ -41,22 +46,20 @@ body
 					font-size 2em
 					text-decoration none
 				.comments
-					color #00C2C4
-					margin-left 0.5em
-				.like
 					color azul
-					margin 0 1em
-				.dislike
+					margin-left 0.5em
+				.love-it
 					color rosa
+					margin 0 1em
+				.views
+					color azul
+				span
+					color #ccc
+					font-size .4em
+					position relative
+					top -5px
 					
-				&:before
-					border-color transparent black transparent transparent
-					border-style solid
-					border-width 15px
-					content ''
-					left -20px
-					position absolute
-					top 0px				
+						
 			.timesince
 				color gray
 				text-align right
@@ -73,12 +76,9 @@ body
 		
 .down-header
 	margin-bottom 2em
-	margin-top 5em
 	overflow hidden
 	
 	.profile-info
-		background azul_medium
-		color white
 		position relative
 		text-align center
 		width 20%
@@ -93,73 +93,6 @@ body
 			height 200px
 			width 200px
 			
-	.publish
-		margin-top 2em
-		width 65%
-		input
-			border-top 1px solid #DDD
-			border-left 2px solid #DDD
-			display block
-			margin-bottom 1em
-			outline none
-			padding 1em
-			width 90%
-			&:focus
-				outline 2px solid azul
-			
-		.publish-button
-			background fusia
-			border 0
-			box-shadow inset 0 -5px rosa_dark
-			color white
-			font-size 1.5em
-			margin-bottom 4px
-			padding  .7em 
-			
-			.fa
-				margin-left 10px
-			&:hover
-				background fusia_light
-			&:active
-				margin-top 4px 
-				margin-bottom 0
-				box-shadow none
-	.quote
-		background blanco
-		font-family 'Roboto'
-		font-size 18px
-		font-style italic
-		color black
-		margin-top 1em
-		padding 0.5em
-		position relative
-		text-decoration none
-		text-align center		
-		width 70%
-		
-		a
-			float right
-			color #555
-			position absolute
-			bottom -30px
-			right 0
-			text-decoration none
-			text-shadow 1px 1px 10px white
-		b
-			display none
-		i
-			color gray
-			position absolute
-			top -10px
-			left 10px
-		&:before
-			content ''
-			border-width 25px
-			border-style solid
-			border-color blanco transparent transparent transparent
-			position absolute
-			bottom -35px
-			right 10px
 			
 .left
 	float left
@@ -167,40 +100,20 @@ body
 .navigation
 	background black
 	color white
-	left 0
-	overflow hidden
-	position fixed
-	top 0
-	z-index 999
 	width 100%
 	
 	.logo
 		img
-			margin 0
-			height 50px
-			width 50px
+			margin-top .5em
+			height 3em
+			width 3em
 
-	.search-logo
-		width 50%
-		.search
-			position relative
-			overflow hidden
-			input
-				border 0
-				margin 1em
-				padding 1em
-				outline none
-				width 90%
-				&:focus
-					box-shadow 0 0 2px 2px azul_medium inset
-					
-			.search-icon
-				color gray
-				font-size 2em
-				position absolute
-				right 20px
-				top 0.8em
-	
+	.search
+		border-bottom 2px solid rosa
+		position relative
+		top -.3em
+		overflow hidden
+		
 	.tabs
 		list-style none
 		height 3em
@@ -222,12 +135,6 @@ body
 .right
 	float right
 	
-.el-2x 
-	font-size 2em
-.el-3x 
-	font-size 3em
-.el-4x
-	font-size 4em
 
 @media screen and (max-width 768px)
 	.down-header 
@@ -238,11 +145,15 @@ body
 		.search-logo
 			display none
 
+@media screen and (max-width 600px)
+	.navigation
+		margin-bottom 2em
+
 @media screen and (max-width 480px)
 	.container
 		.new
 			display inline-block
-			margin-bottom 2em
+			margin-bottom 1em
 			overflow hidden
 			width 100%
 			.autor
@@ -261,7 +172,7 @@ body
 						
 					&:before
 						content none
-
+	
 	.down-header
 		.profile-info
 			display none
@@ -271,14 +182,7 @@ body
 				font-size 1.2em
 		.quote
 			display none
-	
 	.navigation
-		.logo
-			display none
-		.search-logo
-			width 100%
-		.tabs
-
-			padding-left 0
-			li
-				padding 1em 
+		margin-bottom 2em
+			
+	
