--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,39 +8,84 @@
 	
 
 {% block content %}
-	<div class="body">
+	<div class="body ">
 		<div class="pre-loader"></div>
 		<header>
-			<a class="btn-registrate float" href="#"><i class="el-icon-edit"></i> Registrate</a>
-			<a href="#" class="btn-login ocultar"><i class="fa fa-sign-in "></i> Login</a>
+			<a class="btn-registrate float" href="#"><i class="el el-edit"></i> Registrate</a>
+			<a href="#" class="btn-login ocultar"><i class="mdi-content-inbox small "></i> Login</a>
 		</header>
-		<div class="container">
-			<div class="login">
-				<form action="/user/login" method="POST">
-					<div>
-						<input type="email" name="email" placeholder="example@mail.com" required>
-						<i class="el-icon-torso user-icon"></i>	
-					</div>
+		<div class="form-container ">
+			<div class="login col s6  ">
+				<form action="/user/login" class="col s12 " method="POST">
 					
-					<div>
-						<input type="password" name="password" placeholder="password" required>
-						<i class="el-icon-lock password-icon"></i>
-					</div>
+					    <div class="row">
+					    
+					      <div class="input-field col s10 offset-s1	">
+					        <i class="mdi-action-account-circle prefix"></i>
+					        <input id="icon_prefix" name="email" type="email" class="validate">
+					        <label for="icon_prefix">correo</label>
+					      </div>
+					      
+					   </div>
+					   <div class="row">
+				      	<div class="input-field col s10 offset-s1">
+				      	  <i class="mdi-action-https prefix"></i>
+				      	  <input id="icon_telephone" type="password" name="password" class="validate">
+				      	  <label for="icon_telephone">contraseña</label>
+				      	</div>
+				      </div>
+					  
+					<span class="button-submit button-center">
+						<button class="btn btn-large waves-effect waves-light pink darken-1" type="submit" name="action">Entrar</button>				
+					</span>
+					<p class="red-color center-align">{{error}}</p>	
 
-					<button type="submit" class="grow"><i class="fa fa-sign-in"></i> Entrar</button>
-
-					<p class="red">{{error}}</p>
 				</form>
+
+				<div class="oauth row">
+					<div class="facebook col s6  l8">
+						<a href="/auth/facebook"><i class="el el-facebook el-2x"></i> Login con facebook</a>
+					</div>
+					<div class="twitter col s6 l4">
+						<a href="/auth/twitter"><i class="el el-twitter el-2x"></i> Login con twitter</a>
+					</div>
+				</div>
 			</div>
 			<div class="registro ocultar">
-				<form action="/user/new" method="POST">
-					<input id="name" name="name" type="text" placeholder="Nombre completo" required>
-					<input id="email" name="email" type="text" placeholder="example@mail.com"required>
-					<p class="email-error"></p>
-					<input id="password" name="password" type="password" placeholder="password"required>
-					<input id="nickname" name="nickname" type="text" placeholder="Nickname"required>
-					<p class="nickname-error"></p>
-					<button  type="submit"><i class="el-icon-ok-circle"></i>Enviar</button>
+				<form action="/user/new" method="POST" >
+					<div class="row ">
+					    <div class="row">
+					      <div class="input-field col s12">
+					        <input name="name" id="first_name" type="text" class="validate" required>
+					        <label for="first_name">Nombre Completo</label>
+					      </div>
+					      
+					    </div>
+					    <div class="row">
+					      <div class="input-field col s12">
+					        <input name="email" id="email" type="email" class="validate" required>
+					        <label for="email">Correo</label>
+					        <p for="" class="email-error red-color"></p>
+					      </div>
+					    </div>
+					    <div class="row">
+					      <div class="input-field col s12">
+					        <input name="password" id="password" type="password" class="validate" required>
+					        <label for="password">Contraseña</label>
+					      </div>
+					    </div>
+					    <div class="row">
+					      <div class="input-field col s12">
+					        <input name="username" id="username" type="text" class="validate" required>
+					        <label for="username">usuario</label>
+					        <p class="username-error center-align"></p>
+					      </div>
+					    </div>
+					</div>
+					<span class="button-submit button-center">
+						<button class="btn btn-large waves-effect waves-light blue-darken-1" type="submit" name="action">Guardar</button>
+					</span>
+					<p class="red-color center-align">{{error}}</p>	
 				</form>
 			</div>	
 			
