--- a/public/css/welcome.styl
+++ b/public/css/welcome.styl
@@ -35,35 +35,18 @@ body,html
 				width 80%
 	
 		
-				
-.buttons
-	background #555
-	margin-top -1em
-	overflow hidden
-	position relative
-	a	
-		color white
-	.next
-		color white
-		background verde
-		border 0
-		font-size 1.5em
-		margin-left 2em
-		padding .7em
-		position relative
-		text-decoration none
-		
-		&:before
-			content ''
-			border-width 15px
-			border-style solid 
-			border-color transparent verde transparent transparent
-			position absolute
-			top 25%
-			left -25px
 			
-.dragover-form
-	background orange
+.btn-next
+	color white
+	background verde
+	border 0
+	font-size 1.5em
+	padding .7em
+	position absolute
+	bottom 35%
+	right 5%
+	text-decoration none
+	
 		
 .left
 	float left
@@ -76,7 +59,6 @@ body,html
 	background-size cover
 	box-shadow inset 0 -7px 7px -7px rgba(0,0,0,0.7)
 	box-sizing border-box
-	position relative
 	transform-style inherit	
 	width 100%
 	
