--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	{% block stylesheets %}	
+		<link rel="icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="css/materialize.min.css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet"  href="css/hover-min.css">	
