--- a/public/css/chat.styl
+++ b/public/css/chat.styl
@@ -1,3 +1,27 @@
+*  
+	-webkit-box-sizing: border-box; 
+	-moz-box-sizing: border-box; 
+	-o-box-sizing: border-box; 
+	box-sizing: border-box; 
+	/* adds animation for all transitions */ 
+	-webkit-transition: .25s ease-in-out; 
+	-moz-transition: .25s ease-in-out; 
+	-o-transition: .25s ease-in-out; 
+	transition: .25s ease-in-out; 
+	margin: 0; 
+	padding: 0; 
+	-webkit-text-size-adjust: none; 
+
+
+/* Makes sure that everything is 100% height */ 
+
+html
+body 
+	height 100%
+	overflow hidden
+
+
+
 .chat-container
 	position absolute !important
 	top 5em
@@ -17,4 +41,7 @@
 			bottom 0
 			left 0
 			width 100%
+			i 
+			label
+				borde 1px solid red !important
 		
