--- a/public/css/chat.styl
+++ b/public/css/chat.styl
@@ -1,47 +1,206 @@
-*  
-	-webkit-box-sizing: border-box; 
-	-moz-box-sizing: border-box; 
-	-o-box-sizing: border-box; 
-	box-sizing: border-box; 
+.connected  
+	-webkit-box-sizing border-box 
+	-moz-box-sizing border-box 
+	-o-box-sizing border-box 
+	box-sizing border-box 
 	/* adds animation for all transitions */ 
-	-webkit-transition: .25s ease-in-out; 
-	-moz-transition: .25s ease-in-out; 
-	-o-transition: .25s ease-in-out; 
-	transition: .25s ease-in-out; 
-	margin: 0; 
-	padding: 0; 
-	-webkit-text-size-adjust: none; 
+	-webkit-transition .50s ease-in-out 
+	-moz-transition .50s ease-in-out 
+	-o-transition .50s ease-in-out 
+	transition .50s ease-in-out 
+	margin 0 
+	padding 0 
+	-webkit-text-size-adjust none 
+
+body
+html
+	height 100%
+	overflow hidden	
 
 
 /* Makes sure that everything is 100% height */ 
 
-html
-body 
-	height 100%
-	overflow hidden
+#drawer-toggle  
+	position  absolute 
+	opacity  0 
+	top -6em
 
 
+#drawer-toggle-label  
+	-khtml-user-select  none 
+	-moz-user-select  none 
+	-ms-user-select  none 
+	-webkit-touch-callout  none 
+	-webkit-user-select  none 
+	background  rgba(255,255,255,0) 
+	display  block 
+	height 50px
+	left  0px 
+	top -5.8em
+	user-select  none 
+	width  50px 
+	z-index  100
+
+	&:before  
+		content  '' 
+		display  block 
+		position  absolute 
+		height  1px 
+		width  20px 
+		background  #555 
+		left  13px 
+		top  15px 
+		box-shadow  0 6px 0 #555, 0 12px 0 #555 
+	 
+ 
 
 .chat-container
-	position absolute !important
-	top 5em
-	left 0
-	bottom 0 
-	right 0
-	overflow hidden
-	.connected
+	position relative
 	.chat-panel
-		position relative
-		height 100%
-		ul
-			height 100%
-			overflow-y scroll
-		.writter
+		position absolute
+		top 0
+		bottom 0
+		left 32%
+		right 0
+		height 100vh
+		overflow hidden
+		.messages
 			position absolute
+			top 0
+			left 0 
+			right -20px
+			bottom 0px
+			height 80%
+			overflow auto
+			.message-item
+				overflow hidden
+				margin 1em
+				.user-photo
+					
+					width 8%
+				.message
+					background white
+					color #555
+					padding .5em
+					position relative
+					float right
+					width 90%
+					&:before
+						content ''
+						border-style solid 
+						border-width 15px 
+						border-color transparent white transparent transparent
+						position absolute
+						top 40%
+						left -30px
+		
+		
+	.connected
+		position absolute
+		top 0
+		bottom 0
+		left 0
+		right 70%
+		height 100vh
+		overflow hidden
+		z-index 100
+		.drawer  
+			background white
+			position absolute
+			top 0
+			left 0
+			bottom 0
+			right -15px
+			overflow auto	
+		
+		
+
+		
+@media screen and (min-width  320px)
+	
+	.chat-container
+		
+		.chat-panel
+			position absolute
+			top 0
 			bottom 0
 			left 0
-			width 100%
-			i 
-			label
-				borde 1px solid red !important
+			right 0
+			height 100vh
+			.messages
+				bottom -100px
+				
+					
+			.writter
+				background #333
+				color white
+				position absolute
+				bottom 3em
+				left 0
+				width 100%
+			
+		.connected
+			position absolute
+			top -30px
+			bottom 0
+			left 0%
+			right 100%
+			height 100vh
+			overflow hidden
+			
+			.drawer  
+				position absolute
+				top 0
+				left 0
+				bottom 0
+				right -1em
+				overflow auto	
+
+		#drawer-toggle
+			&:checked ~ .connected
+				right: 50%
+			&:checked ~ #chat-panel
+				background rgba(0,0,0,.7)
+			
+
 		
+@media screen and (min-width 600px)
+	
+	#drawer-toggle-label  
+		top -4em
+	.chat-container
+		
+		.chat-panel
+			position absolute
+			top 0
+			bottom 0
+			left 0
+			right 0
+			height 100vh
+					
+		.connected
+			position absolute
+			top 0
+			bottom 0
+			left 0
+			right 100%
+			height 100vh
+			overflow hidden
+			
+		
+
+
+@media screen and (min-width 992px)
+	.chat-container
+		background white
+		.connected
+			right 72%
+			height 100vh
+			
+		.chat-panel
+			left 30%
+			
+			.writter
+				bottom 4em
+				background #fff
+				color #555
