--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}{% endblock title %}
+{% block title %}{{user.name}}{% endblock title %}
 
 {% block stylesheets %}
 	<link rel="stylesheet" href="css/home.css">
