--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -3,7 +3,7 @@
 	  <nav class="navigation">
 	    <div class="row">
 	      <a href="/home" class="logo col l2 hide-on-med-and-down"><img src="images/logo.png" alt=""></a>
-	      <ul class="right col s12 l10 m12">
+	      <ul class="right col s11 l10 m11 offset-s1 offset-m1">
 	      	<li class="hide-on-small-only col l8 m6 search">				    
 	      		<div class="input-field">
 				      <i class="mdi-action-search prefix"></i>
