--- a/app/views/login.html
+++ b/app/views/login.html
@@ -12,42 +12,44 @@
 		<div class="pre-loader"></div>
 		<header>
 			<a class="btn-registrate float" href="#"><i class="el el-edit"></i> Registrate</a>
-			<a href="#" class="btn-login ocultar"><i class="mdi-content-inbox small "></i> Login</a>
+			<a href="#" class="btn-login ocultar"><i class="mdi-content-inbox tiny "></i> Login</a>
 		</header>
 		<div class="form-container ">
-			<div class="login col s6  ">
-				<form action="/user/login" class="col s12 " method="POST">
-					
-					    <div class="row">
-					    
-					      <div class="input-field col s10 offset-s1	">
-					        <i class="mdi-action-account-circle prefix"></i>
-					        <input id="icon_prefix" name="email" type="email" class="validate">
-					        <label for="icon_prefix">correo</label>
-					      </div>
-					      
-					   </div>
-					   <div class="row">
-				      	<div class="input-field col s10 offset-s1">
-				      	  <i class="mdi-action-https prefix"></i>
-				      	  <input id="icon_telephone" type="password" name="password" class="validate">
-				      	  <label for="icon_telephone">contraseña</label>
-				      	</div>
-				      </div>
-					  
-					<span class="button-submit button-center">
-						<button class="btn btn-large waves-effect waves-light pink darken-1" type="submit" name="action">Entrar</button>				
-					</span>
-					<p class="red-color center-align">{{error}}</p>	
+			<div class="login col s8 m12  ">
+				<form action="/user/login" class="row " method="POST">
+					<div class="col s12 m12">
+							    <div class="row">
+							    
+							      <div class="input-field col s10 offset-s1	">
+							        <i class="mdi-action-account-circle prefix"></i>
+							        <input id="icon_prefix" name="email" type="email" class="validate">
+							        <label for="icon_prefix">correo</label>
+							      </div>
+							      
+							   </div>
+							   <div class="row">
+						      	<div class="input-field col s10 offset-s1">
+						      	  <i class="mdi-action-https prefix"></i>
+						      	  <input id="icon_telephone" type="password" name="password" class="validate">
+						      	  <label for="icon_telephone">contraseña</label>
+						      	</div>
+						      </div>
+					</div>
+					<div class="col s12">
+						  
+						<span class="button-submit button-center">
+							<button class="btn btn-small waves-effect waves-light pink darken-1" type="submit" name="action">Entrar</button>				
+						</span>
+						<p class="red-color center-align">{{error}}</p>	
+					</div>
 
 				</form>
-
 				<div class="oauth row">
 					<div class="facebook col s6  l8">
-						<a href="/auth/facebook"><i class="el el-facebook el-2x"></i> Login con facebook</a>
+						<a href="/auth/facebook"><i class="el el-facebook el-2x"></i> entra con facebook</a>
 					</div>
 					<div class="twitter col s6 l4">
-						<a href="/auth/twitter"><i class="el el-twitter el-2x"></i> Login con twitter</a>
+						<a href="/auth/twitter"><i class="el el-twitter el-2x"></i> entra con twitter</a>
 					</div>
 				</div>
 			</div>
@@ -83,7 +85,7 @@
 					    </div>
 					</div>
 					<span class="button-submit button-center">
-						<button class="btn btn-large waves-effect waves-light blue-darken-1" type="submit" name="action">Guardar</button>
+						<button class="btn btn-small waves-effect waves-light blue-darken-1" type="submit" name="action">Guardar</button>
 					</span>
 					<p class="red-color center-align">{{error}}</p>	
 				</form>
