--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -22,14 +22,14 @@ header
 .button-center
 	display block
 	margin 0 auto
-	width 20%
+	width 30%
 	
 .body
 	min-height 100vh
 	
 .borde 
 	border 2px solid red
-			
+	
 .btn-registrate
 .btn-login
 	background transparent
@@ -37,7 +37,7 @@ header
 	box-shadow rgba(0,0,0,0.5) 0px 0px 5px
 	color white
 	float right
-	font-size 1.5em
+	font-size 1em
 	margin 1em
 	padding 1em
 	text-decoration none
@@ -81,7 +81,6 @@ header
 		overflow hidden
 		a 
 			font-weight bold
-			padding 1em
 			text-decoration none
 			
 		
@@ -123,27 +122,7 @@ header
 	top 0px
 	width 100%
 	z-index 9999
-	
-.red-color
-	color red
 
-/*.registro
-	button 
-		background #2DC400
-		border 0
-		border-bottom 4px solid green 	
-		display block
-		font-family 'Roboto'
-		font-size 24px
-		color white
-		margin 0 auto
-		padding 0.5em 
-		overflow hidden
-		text-shadow #26A500 1px 1px, #26A500 2px 2px, #26A500 3px 3px, #26A500 4px 4px, #26A500 5px 5px,#26A500 6px 6px,#26A500 7px 7px,#26A500 8px 8px,#26A500 9px 9px,#26A500 10px 10px,#26A500 11px  11px,#26A500 12px 12px,#26A500 13px 13px,#26A500 14px 14px,#26A500 15px 15px,#26A500 16px 16px,#26A500 17px 17px,#26A500 18px 18px,#26A500 19px 19px,#26A500 20px 20px,#26A500 21px 21px,#26A500 22px 22px,#26A500 23px 23px,#26A500 24px 24px,#26A500 25px 25px,#26A500 26px 26px,#26A500 27px 27px,#26A500 29px 29px,#26A500 30px 30px
-		
-		&:hover
-			background #2DCF00
-*/
 .ocultar
 	display none	
 
@@ -183,6 +162,17 @@ header
 			transform translateY(0%)
 			opacity 1
 			
+@media screen and (min-width 1280px)
+	.form-container
+		position absolute
+		top 30%
+		width 100%
+		.login
+			background white
+			border-radius 10px
+			margin 0 auto
+			width 50%
+
 
 
 @media screen and (max-width 768px)
@@ -206,7 +196,14 @@ header
 	.form-container
 		.login
 		.registro
-			width 90%
+			width 100%
+		
+		.registro
+			top -5em
+			input
+				margin 0
+				padding 0
+			
 			
 	footer
 		.contactanos
