--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -89,27 +89,27 @@
     	<div class="chat-panel" >
     		<div class="messages">
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     			<div class="message-item">
-    				<img class="user-photo" src="{{user.photo}}" alt="">
+    				<img class="user-photo circle" src="{{user.photo}}" alt="">
     				<span class="message">Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</span>
     			</div>
     		</div>
