--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -16,7 +16,11 @@
 			<div class="profile-photo">
 				<div id="my-awesome-dropzone" action="/upload-photo" class="dropzone"></div>
 			</div>
-			<a class="btn-next el el-ok" href="/home" >Siguiente</a>	
+			<div class="btn-next">
+				<a class="btn waves-effect waves-light btn-large" href="/home" name="action">Siguiente<i class="mdi-content-send right"></i></a>	
+			</div>
+			
+			       
 		</div>
 		
 	</section>
