--- a/app/views/home.html
+++ b/app/views/home.html
@@ -32,8 +32,15 @@
 			     <p><a href="#">Ver perfil</a></p>
 			   </div>
 			   <div class="card-reveal">
-			     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
-			     <p>Here is some more information about this product that is only revealed once clicked on.</p>
+			   {% if user.provider_id %}
+					<span class="card-title grey-text text-darken-4">Registrate para subir la foto que mas te guste <i class="mdi-navigation-close right"></i></span>
+					<p><a href="/logout">primero cierra tu sesion</a></p>   	
+			
+			   	{% else %}
+					<span class="card-title grey-text text-darken-4">Hola {{user.name}} <i class="mdi-navigation-close right"></i></span>
+					<p><a href="/welcome">Cambiar foto</a></p>
+			   {% endif %}
+
 			   </div>
 			 </div>
 		</section>
