--- a/public/css/chat.styl
+++ b/public/css/chat.styl
@@ -76,22 +76,22 @@ html
 				overflow hidden
 				margin 1em
 				.user-photo
-					
-					width 8%
+					height 50px
+					width 50px
 				.message
 					background white
 					color #555
 					padding .5em
 					position relative
 					float right
-					width 90%
+					width 92%
 					&:before
 						content ''
 						border-style solid 
 						border-width 15px 
 						border-color transparent white transparent transparent
 						position absolute
-						top 40%
+						top 10%
 						left -30px
 		
 		
